--- a/about.html
+++ b/about.html
@@ -146,35 +146,55 @@
         <div class="card">
             <h2>Global Visits</h2>
             <p>We're proud to have a global community of users!</p>
-            <div class="visits-grid">
-                <div class="visit-item">
-                    <div class="flag">🇺🇸</div>
-                    <p>United States</p>
-                    <p>1,200 visits</p>
-                </div>
-                <div class="visit-item">
-                    <div class="flag">🇩🇪</div>
-                    <p>Germany</p>
-                    <p>200 visits</p>
-                </div>
-                <div class="visit-item">
-                    <div class="flag">🇮🇳</div>
-                    <p>India</p>
-                    <p>650 visits</p>
-                </div>
-                <div class="visit-item">
-                    <div class="flag">🇯🇵</div>
-                    <p>Japan</p>
-                    <p>120 visits</p>
-                </div>
-                <div class="visit-item">
-                    <div class="flag">🇧🇷</div>
-                    <p>Brazil</p>
-                    <p>100 visits</p>
-                </div>
+            <div class="visits-grid" id="visits-grid">
+                <!-- Visits will be loaded here -->
             </div>
         </div>
     </div>
 
+    <script>
+        async function recordAndDisplayVisits() {
+            try {
+                // Record the visit
+                await fetch('/api/visit', { method: 'POST' });
+
+                // Fetch all visits
+                const response = await fetch('/api/visits');
+                const visits = await response.json();
+                
+                const visitsGrid = document.getElementById('visits-grid');
+                visitsGrid.innerHTML = '';
+
+                const countryFlags = {
+                    "United States": "🇺🇸",
+                    "Germany": "🇩🇪",
+                    "India": "🇮🇳",
+                    "Japan": "🇯🇵",
+                    "Brazil": "🇧🇷",
+                };
+
+                for (const country in visits) {
+                    const visitData = visits[country];
+                    const flag = countryFlags[country] || visitData.flag || '🌐';
+
+                    const visitItem = document.createElement('div');
+                    visitItem.className = 'visit-item';
+                    visitItem.innerHTML = `
+                        <div class="flag">${flag}</div>
+                        <p>${country}</p>
+                        <p>${visitData.visits.toLocaleString()} visits</p>
+                    `;
+                    visitsGrid.appendChild(visitItem);
+                }
+
+            } catch (error) {
+                console.error('Error fetching or displaying visit data:', error);
+                const visitsGrid = document.getElementById('visits-grid');
+                visitsGrid.innerHTML = '<p>Could not load visit data.</p>';
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', recordAndDisplayVisits);
+    </script>
 </body>
 </html> 
