--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
         }
 
         .header-content {
-            max-width: 1000px;
-            margin: 0 auto;
             display: flex;
             align-items: center;
             flex: 1 1 auto;
@@ -767,27 +765,13 @@
         // Select All logic for each section
         function setupSelectAll(sectionId, selectAllId, childClass) {
             const selectAll = document.getElementById(selectAllId);
-            const children = document.querySelectorAll(`#${sectionId} .${childClass}`);
-            selectAll.addEventListener('change', function() {
-                children.forEach(cb => { cb.checked = selectAll.checked; });
-            });
-            children.forEach(cb => {
-                cb.addEventListener('change', function() {
-                    if (!cb.checked) {
-                        selectAll.checked = false;
-                    } else {
-                        const allChecked = Array.from(children).every(c => c.checked);
-                        selectAll.checked = allChecked;
-                    }
+            const children = document.querySelectorAll(`${childClass}`);
+            selectAll.addEventListener('change', () => {
+                children.forEach(child => {
+                    child.checked = selectAll.checked;
                 });
             });
         }
-        document.addEventListener('DOMContentLoaded', () => {
-            setupSelectAll('section-charger-types', 'selectAllChargerTypes', 'charger-type-child');
-            setupSelectAll('section-network', 'selectAllNetwork', 'network-child');
-            setupSelectAll('section-status', 'selectAllStatus', 'status-child');
-            setupSelectAll('section-power', 'selectAllPower', 'power-child');
-        });
     </script>
 </body>
 </html>
