--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChargeNear - Find EV Charging Stations</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="ChargeNear - Find EV Charging Stations">
