--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChargeNear - Find EV Charging Stations</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=1">
+    <link rel="apple-touch-icon" href="/favicon.ico?v=1">
     
     <!-- Primary Meta Tags -->
     <meta name="title" content="ChargeNear - Find EV Charging Stations">
